add api spec for oauth datasource exchange
