# myncer-web/src/generated_api/src/models/Datasource.ts
@@ -1,0 +1,55 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Myncer API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * 
+ * @export
+ */
+export const Datasource = {
+    Spotify: 'SPOTIFY',
+    Youtube: 'YOUTUBE',
+    Deezer: 'DEEZER',
+    Tidal: 'TIDAL'
+} as const;
+export type Datasource = typeof Datasource[keyof typeof Datasource];
+
+
+export function instanceOfDatasource(value: any): boolean {
+    for (const key in Datasource) {
+        if (Object.prototype.hasOwnProperty.call(Datasource, key)) {
+            if (Datasource[key as keyof typeof Datasource] === value) {
+                return true;
+            }
+        }
+    }
+    return false;
+}
+
+export function DatasourceFromJSON(json: any): Datasource {
+    return DatasourceFromJSONTyped(json, false);
+}
+
+export function DatasourceFromJSONTyped(json: any, ignoreDiscriminator: boolean): Datasource {
+    return json as Datasource;
+}
+
+export function DatasourceToJSON(value?: Datasource | null): any {
+    return value as any;
+}
+
+export function DatasourceToJSONTyped(value: any, ignoreDiscriminator: boolean): Datasource {
+    return value as Datasource;
+}
+
