# myncer-web/src/generated_api/src/models/index.ts
@@ -2,7 +2,9 @@
 /* eslint-disable */
 export * from './CreateUserRequest';
 export * from './CreateUserResponse';
+export * from './Datasource';
 export * from './EditUserRequest';
 export * from './ListUsersResponse';
+export * from './OAuthExchangeRequest';
 export * from './User';
 export * from './UserLoginRequest';
