# server/api/model_o_auth_exchange_request.go
@@ -1,0 +1,196 @@
+/*
+Myncer API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the OAuthExchangeRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &OAuthExchangeRequest{}
+
+// OAuthExchangeRequest struct for OAuthExchangeRequest
+type OAuthExchangeRequest struct {
+	// The authorization code returned by the datasource.
+	Code string `json:"code"`
+	// Optional CSRF protection token returned from the datasource.
+	State *string `json:"state,omitempty"`
+}
+
+type _OAuthExchangeRequest OAuthExchangeRequest
+
+// NewOAuthExchangeRequest instantiates a new OAuthExchangeRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewOAuthExchangeRequest(code string) *OAuthExchangeRequest {
+	this := OAuthExchangeRequest{}
+	this.Code = code
+	return &this
+}
+
+// NewOAuthExchangeRequestWithDefaults instantiates a new OAuthExchangeRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewOAuthExchangeRequestWithDefaults() *OAuthExchangeRequest {
+	this := OAuthExchangeRequest{}
+	return &this
+}
+
+// GetCode returns the Code field value
+func (o *OAuthExchangeRequest) GetCode() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Code
+}
+
+// GetCodeOk returns a tuple with the Code field value
+// and a boolean to check if the value has been set.
+func (o *OAuthExchangeRequest) GetCodeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Code, true
+}
+
+// SetCode sets field value
+func (o *OAuthExchangeRequest) SetCode(v string) {
+	o.Code = v
+}
+
+// GetState returns the State field value if set, zero value otherwise.
+func (o *OAuthExchangeRequest) GetState() string {
+	if o == nil || IsNil(o.State) {
+		var ret string
+		return ret
+	}
+	return *o.State
+}
+
+// GetStateOk returns a tuple with the State field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *OAuthExchangeRequest) GetStateOk() (*string, bool) {
+	if o == nil || IsNil(o.State) {
+		return nil, false
+	}
+	return o.State, true
+}
+
+// HasState returns a boolean if a field has been set.
+func (o *OAuthExchangeRequest) HasState() bool {
+	if o != nil && !IsNil(o.State) {
+		return true
+	}
+
+	return false
+}
+
+// SetState gets a reference to the given string and assigns it to the State field.
+func (o *OAuthExchangeRequest) SetState(v string) {
+	o.State = &v
+}
+
+func (o OAuthExchangeRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o OAuthExchangeRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["code"] = o.Code
+	if !IsNil(o.State) {
+		toSerialize["state"] = o.State
+	}
+	return toSerialize, nil
+}
+
+func (o *OAuthExchangeRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"code",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varOAuthExchangeRequest := _OAuthExchangeRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varOAuthExchangeRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = OAuthExchangeRequest(varOAuthExchangeRequest)
+
+	return err
+}
+
+type NullableOAuthExchangeRequest struct {
+	value *OAuthExchangeRequest
+	isSet bool
+}
+
+func (v NullableOAuthExchangeRequest) Get() *OAuthExchangeRequest {
+	return v.value
+}
+
+func (v *NullableOAuthExchangeRequest) Set(val *OAuthExchangeRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableOAuthExchangeRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableOAuthExchangeRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableOAuthExchangeRequest(val *OAuthExchangeRequest) *NullableOAuthExchangeRequest {
+	return &NullableOAuthExchangeRequest{value: val, isSet: true}
+}
+
+func (v NullableOAuthExchangeRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableOAuthExchangeRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
